--- a/assets/scss/pages/_water-trucks.scss
+++ b/assets/scss/pages/_water-trucks.scss
@@ -24,5 +24,5 @@
 }
 
 .wt-hero .container .row {
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
